--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
-addopts = -q --cov-report term-missing --cov=ocdsexport
+addopts = -q --cov-report term-missing --cov=wishbonecouchdb
 python_files = tests/test*.py
