--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,18 @@
 arrow==0.12.1
-certifi==2018.4.16
+certifi==2018.8.13
 chardet==3.0.4
 colorama==0.3.9
 CouchDB==1.2
 cronex==0.1.2
 easydict==1.7
-gevent==1.3.4
+gevent==1.3.5
 gipc==0.6.0
-greenlet==0.4.13
+greenlet==0.4.14
 idna==2.7
-inotify==0.2.9
+inotify==0.2.10
+iso8601==0.1.12
 Jinja2==2.10
+jq==0.1.6
 jsonschema==2.6.0
 lockfile==0.12.2
 MarkupSafe==1.0
@@ -20,7 +22,7 @@ prettytable==0.7.2
 Pygments==2.2.0
 python-daemon-3K==1.5.8
 python-dateutil==2.7.3
-PyYAML==3.12
+PyYAML==3.13
 requests==2.19.1
 scalpl==0.2.5
 six==1.11.0
